# Memory-Agent

./: .gitignore  PLAN.md  README.md
backend/: .env.example  .gitignore  cleanup_duplicates.py  pyproject.toml
backend/app/: __init__.py  auth_deps.py  config.py  database.py  main.py
backend/app/models/: memory.py  schemas.py
backend/app/prompts/: extraction.py  procedural.py  system.py
backend/app/routers/: auth.py  chat.py  confirmation.py  debug.py  profile.py
backend/app/services/: auth_service.py  chat_service.py  context_assembler.py  episodic_service.py  llm.py  memory_service.py  memory_writer.py  proactive_service.py  procedural_service.py  profile_service.py  vector_service.py
backend/tests/: test_decay.py  test_merge.py
frontend/app/: page.tsx
frontend/app/chat/: page.tsx
frontend/lib/: api.ts
