[project]
name = "agent-memory-chat"
version = "0.1.0"
description = "Backend for agent-memory-chat"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "anthropic",
    "openai",
    "pydantic",
    "pydantic-settings",
    "aiosqlite",
    "sqlite-vec",
]
[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"